Version 1.4g - header margin fix - Logout button (as hinted by @maebs) - Ordering fixed - underline removed in 3rd column to improve readabily (as hinted by @epologee) - Removed the 'more' and 'less' buttons, i'll put it back when miss it or have a better implementation - Removed autocompletion on the input field of todo's - The height of the url is enlanged for easier drag and drop - Focus is back - Read only password doesn't show on a slow connection fixed - Fix for overlapping twinform fields (fixed with help of JQuery) - Removed some javscript logs NOTICE; I CHANGED THE ORDER OF ALL TODO ITEMS IN THIS VERSION TO IMPROVE THE DATABASE QUERIES, I AM SORRY!

--- a/app/webroot/css/todomeister.less
+++ b/app/webroot/css/todomeister.less
@@ -78,6 +78,10 @@ body {
 		margin-bottom: 14px;
 	}
 	
+	header h1 {
+		margin-bottom: 2px;
+	}
+	
 	h1, h2, p, div {
 		em {
 			color: @blue;
@@ -223,7 +227,7 @@ body {
 			background-color: @done-background-color;
 			font-size: 0.9em;
 			p {
-				text-decoration: line-through;
+				text-decoration: underline;
 			}
 		}
 	}
